# Saturn

./: Cargo.toml  README.md  lib.rs
CLI/: client  client.js
core_modules/: Cargo.toml
core_modules/src/: gemini.rs  jarvis.rs  lib.rs  openai.rs  search.rs
core_modules/src/chat_completions/: mod.rs
core_modules/src/chat_completions/bots/: mod.rs  saturn.rs
core_modules/src/chat_completions/interfaces/: chat.rs
core_modules/src/chat_completions/providers/: openai.rs  perplexity.rs
core_modules/src/chat_completions/utils/: is_satisfactory.rs  json_query.rs  mod.rs  needs_internet.rs
src/: main.rs  server.rs
