workspace = { members = ["core_modules"] }
[package]
name = "chacha"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core_modules = { version = "0.1.0", path = "core_modules" }
dotenv = "0.15.0"
reqwest = "0.12.9"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
