[workspace]
members = ["core_modules"]

[package]
name = "saturn"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
core_modules = { path = "core_modules" }
dotenv = "0.15.0"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
warp = "0.3.7"

[[bin]]
name = "main"
path = "./src/main.rs"

[[bin]]
name = "server"
path = "./src/server.rs"
